--- a/styles/style.css
+++ b/styles/style.css
@@ -20,7 +20,7 @@ header {
    width           : 100%;
    top             : 0;
    left            : 0;
-   background-color: #252440;
+   background-color: red;
 }
 
 .nav {
@@ -57,7 +57,7 @@ header {
    font-size  : 5.2rem;
    text-align : center;
    font-weight: 700;
-   color      : #302c9b;
+   color      : white;
 }
 
 .profile .profile--description {
@@ -65,5 +65,89 @@ header {
    font-style : italic;
    font-weight: 200;
    text-align : center;
-   color      : #8380d1;
+   color      : gray;
+}
+
+.projects__section {
+   text-align      : center;
+   background-color: rgb(53, 46, 46);
+   padding         : 10rem 0 10rem 0;
+}
+
+.projects__section h2 {
+   font-size: 3rem;
+   margin   : 0 auto 6rem auto;
+   color    : white;
+}
+
+.projects--grid {
+   display              : grid;
+   grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+   grid-gap             : 4rem;
+}
+
+.project-card {
+   display         : flex;
+   flex-direction  : column;
+   justify-content : center;
+   align-items     : center;
+   width           : min(320px, 500px);
+   background-color: black;
+}
+
+.project-card {
+   text-decoration: none;
+   width          : 100%;
+   color          : aliceblue;
+}
+
+.project-card img {
+   height    : 340px;
+   width     : 100%;
+   object-fit: cover;
+}
+
+.project-tile {
+   font-size: 2rem;
+   padding  : 2rem 0.5rem;
+}
+
+.btn--repository {
+   font-size      : 2rem;
+   background     : red;
+   display        : inline-block;
+   margin-top     : 4rem;
+   padding        : 1rem 2rem;
+   border-radius  : 5px;
+   color          : white;
+   text-decoration: none;
+}
+
+.contact__section {
+   display        : flex;
+   flex-direction : column;
+   justify-content: center;
+   align-items    : center;
+   text-align     : center;
+   width          : 100%;
+   height         : 80vh;
+   padding        : 0 2rem;
+   background     : gray
+}
+
+.contact__title h2 {
+   font-size: 4rem;
+   color    : white;
+}
+
+.contact__social-network {
+   display        : flex;
+   margin-top     : 10px;
+   width          : 100%;
+   justify-content: space-evenly;
+}
+
+.contact__social-network a {
+   color          : blueviolet;
+   text-decoration: none;
 }
