add media queries

--- a/styles/style.css
+++ b/styles/style.css
@@ -151,3 +151,9 @@ header {
    color          : blueviolet;
    text-decoration: none;
 }
+
+@media (min-width: 500px) {
+   .nav {
+      justify-content: flex-end;
+   }
+}
